# myAuthService

./: CMakeLists.txt  install_dependencies.sh  todo
.github/workflows/: build.yaml
config/: config.json  createTables
header/: configParser.h  logger.h  status.h  types.h
header/client/: IRequestManager.h  requestManager.h  requestmanager.h
header/server/: ItokenGenerator.h  SHAHasher.h  cachedStorage.h  cachedstorage.h  grpcAuthService.h  grpcauthservice.h  grpcauthserviceimpl.h  grpcservicefactory.h  iauthservice.h  ihasher.h  itokengenerator.h  shahasher.h  tokenGenerator.h  tokengenerator.h
proto/: service.proto
src/: configParser.cpp
src/client/: client.cpp  requestManager.cpp  requestmanager.cpp
src/server/: cachedStorage.cpp  cachedstorage.cpp  grpcAuthService.cpp  grpcauthserviceimpl.cpp  main.cpp
